// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrganizationDetails render() deletion in progress should render a deletion in progress prompt 1`] = `
<div
  class="app"
>
  <div
    class="app"
  >
    <div
      class="pattern-bg"
    />
    <div
      class="container"
    >
      <div
        class="box box-modal"
      >
        <div
          class="box-header"
        >
          <a
            href="/"
          >
            <span
              class="icon-sentry-logo"
            />
          </a>
        </div>
        <div
          class="box-content with-padding"
        >
          <p>
            <span>
              <span>
                The 
              </span>
              <strong>
                org-slug
              </strong>
              <span>
                 organization is currently in the process of being deleted from Sentry.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
    <footer>
      <div
        class="container"
      >
        <div
          class="pull-right"
        >
          <a
            class="hidden-xs"
            href="/api/"
          >
            API
          </a>
          <a
            href="/docs/"
          >
            Docs
          </a>
          <a
            class="hidden-xs"
            href="https://github.com/getsentry/sentry"
            rel="noreferrer"
          >
            Contribute
          </a>
        </div>
        <a
          class="icon-sentry-logo"
          href="/"
        />
      </div>
    </footer>
  </div>
</div>
`;

exports[`OrganizationDetails render() pending deletion should render a restoration prompt 1`] = `
<div
  class="app"
>
  <div
    class="app"
  >
    <div
      class="pattern-bg"
    />
    <div
      class="container"
    >
      <div
        class="box box-modal"
      >
        <div
          class="box-header"
        >
          <a
            href="/"
          >
            <span
              class="icon-sentry-logo"
            />
          </a>
        </div>
        <div
          class="box-content with-padding"
        >
          <h3>
            Deletion Scheduled
          </h3>
          <p>
            <span>
              <span>
                The 
              </span>
              <strong>
                org-slug
              </strong>
              <span>
                 organization is currently scheduled for deletion.
              </span>
            </span>
          </p>
          <div>
            <p>
              Would you like to cancel this process and restore the organization back to the original state?
            </p>
            <p>
              <button
                class="button button-primary"
                role="button"
              >
                <div
                  class="flow-layout"
                >
                  <span
                    class="button-label"
                  >
                    Restore Organization
                  </span>
                </div>
              </button>
            </p>
          </div>
          <p>
            <small>
              Note: Restoration is available until the process begins. Once it does, there's no recovering the data that has been removed.
            </small>
          </p>
        </div>
      </div>
    </div>
    <footer>
      <div
        class="container"
      >
        <div
          class="pull-right"
        >
          <a
            class="hidden-xs"
            href="/api/"
          >
            API
          </a>
          <a
            href="/docs/"
          >
            Docs
          </a>
          <a
            class="hidden-xs"
            href="https://github.com/getsentry/sentry"
            rel="noreferrer"
          >
            Contribute
          </a>
        </div>
        <a
          class="icon-sentry-logo"
          href="/"
        />
      </div>
    </footer>
  </div>
</div>
`;

exports[`OrganizationDetails render() pending deletion should render a restoration prompt without action for members 1`] = `
<div
  class="app"
>
  <div
    class="app"
  >
    <div
      class="pattern-bg"
    />
    <div
      class="container"
    >
      <div
        class="box box-modal"
      >
        <div
          class="box-header"
        >
          <a
            href="/"
          >
            <span
              class="icon-sentry-logo"
            />
          </a>
        </div>
        <div
          class="box-content with-padding"
        >
          <h3>
            Deletion Scheduled
          </h3>
          <p>
            <span>
              <span>
                The 
              </span>
              <strong>
                org-slug
              </strong>
              <span>
                 organization is currently scheduled for deletion.
              </span>
            </span>
          </p>
          <p>
            If this is a mistake, contact an organization owner and ask them to restore this organization.
          </p>
          <p>
            <small>
              Note: Restoration is available until the process begins. Once it does, there's no recovering the data that has been removed.
            </small>
          </p>
        </div>
      </div>
    </div>
    <footer>
      <div
        class="container"
      >
        <div
          class="pull-right"
        >
          <a
            class="hidden-xs"
            href="/api/"
          >
            API
          </a>
          <a
            href="/docs/"
          >
            Docs
          </a>
          <a
            class="hidden-xs"
            href="https://github.com/getsentry/sentry"
            rel="noreferrer"
          >
            Contribute
          </a>
        </div>
        <a
          class="icon-sentry-logo"
          href="/"
        />
      </div>
    </footer>
  </div>
</div>
`;
